Fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@
 }
 
 .recipes{
-    text-align: center;
+    text-align: center;display:block;
 }
